[metadata]
name = django-fastview
description = Build admin-style views with minimal code
long_description = file: README.rst
keywords = django crud admin
author = Richard Terry
author_email = code@radiac.net
license = BSD
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
url = http://radiac.net/projects/django-fastview/
project_urls =
    Documentation = http://radiac.net/projects/django-fastview/
    Source = https://github.com/radiac/django-fastview
    Tracker = https://github.com/radiac/django-fastview/issues

[options]
python_requires = >=3.7
packages = find:
install_requires = Django>=2.2
include_package_data = true
zip_safe = false

[options.packages.find]
exclude = tests*

[options.extras_require]
testing =
    django<=3.0
    pytest
    pytest-black
    pytest-cov
    pytest-django
    pytest-flake8
    pytest-isort
    pytest-mypy
    tox

[tool:pytest]
addopts = --black --isort --flake8 --mypy --cov=fastview --cov-report=term --cov-report=html
DJANGO_CONFIGURATION=Test

[coverage:run]
parallel=True

[flake8]
ignore = E123,E128,E203,E501,W503
max-line-length = 88
exclude = .tox,.git

[isort]
multi_line_output = 3
line_length = 88
known_django = django
known_first_party = fastview
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
include_trailing_comma = True
lines_after_imports = 2
skip = .tox,.git

[mypy]
ignore_missing_imports = True

[doc8]
max-line-length = 88
ignore-path = *.txt,.tox
